syntax = "proto3";

message LocalStorageItem {
  string key = 1;
  string value = 2;
}

message DomainLocalStorage {
  int64 createTime = 1;
  int64 updateTime = 2;
  repeated LocalStorageItem items = 5;
}

message LocalStorageMap {
  int64 createTime = 1;
  int64 updateTime = 2;
  map<string, DomainLocalStorage> domainLocalStorageMap = 5;
}